# AVR-GUI

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  build.py  package-lock.json  pyproject.toml  test.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: build.yml  check.yml  pre-commit_update.yml  test.yml
app/lib/: calc.py  color.py  color_config.py  config.py  custom_colors.py  directory_config.py  qt_icon.py  user_config.py  widgets.py
app/tabs/: autonomy.py  base.py  moving_map.py  mqtt_debug.py  mqtt_logger.py  pcc_tester.py  thermal_view_control.py  vmc_control.py  vmc_telemetry.py
app/tabs/connection/: main.py  mqtt.py  serial.py
tests/: test_calc.py  test_color.py  test_user_config.py
